some fixes for good video

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             }
         }
         this.playPrev = function () {
-            this.ytplayer.cueVideoById("tnKFSc0-hjM");
+            this.ytplayer.cueVideoById("58nmD7Yu1Og");
             this.ytplayer.playVideo()
         }
         this.playNext = function () {
-            this.ytplayer.cueVideoById("3Tf7xt1w0mM");
+            this.ytplayer.cueVideoById("Jdnfv4qxGe4");
             this.ytplayer.playVideo()
         }
 
@@ -165,7 +165,7 @@
 <script type="text/javascript">
     $('document').ready(function () {
 
-        plController.loadPlayer('GMUlhuTkM3w', 25)
+        plController.loadPlayer('dBArczb8gFs', 25)
 
         $('.controls .pause_play').on(
                 'click',
