--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="./favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 
-<link href="./css/main.css" rel="stylesheet" type="text/css">
+<link href="frontend/static/frontend/css/main.css" rel="stylesheet" type="text/css">
 
 <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
